@@ -18,6 +18,7 @@ RMV	MinVer	FirstA	Name
 3.12	3.12	3.12	HX_mkdir2
 3.12	3.12	3.12	HX_strndup
 3.12	3.12	3.12	HX_strnlen
+3.12	3.12	3.12	HXOPT_ERR_SYS
 3.11	3.11	3.11	HXQUOTE_BASE64
 3.10	3.10	3.10	BUILD_BUG_ON_EXPR
 3.10	3.10	3.10	HX_readlink
